syntax = "proto3";

package fusionchain.identity;

option go_package = "gitlab.qredo.com/qrdochain/fusionchain/x/identity/types";

// Msg defines the Msg service.
service Msg {
  // Create a new Workspace. The user will be the first owner of the workspace.
  rpc NewWorkspace(MsgNewWorkspace) returns (MsgNewWorkspaceResponse);

  // Add a new owner to a workspace.
  rpc AddWorkspaceOwner(MsgAddWorkspaceOwner)
      returns (MsgAddWorkspaceOwnerResponse);

  // Remove an owner from the workspace. The user can remove itself, but at
  // least one owner must be left.
  rpc RemoveWorkspaceOwner(MsgRemoveWorkspaceOwner)
      returns (MsgRemoveWorkspaceOwnerResponse);

  // Add an approval to an existing Action.
  rpc ApproveAction(MsgApproveAction) returns (MsgApproveActionResponse);

  // Create a new keyring. The user will be the first admin of the keyring.
  rpc NewKeyring(MsgNewKeyring) returns (MsgNewKeyringResponse);

  // Add a new party to a keyring. Transactions coming from this party will
  // be considered trusted by the keyring.
  rpc AddKeyringParty(MsgAddKeyringParty) returns (MsgAddKeyringPartyResponse);

  // TODO: document AppendChildWorkspace
  rpc AppendChildWorkspace (MsgAppendChildWorkspace) returns (MsgAppendChildWorkspaceResponse);

  // this line is used by scaffolder # 1
}
message MsgNewWorkspace { string creator = 1; }

message MsgNewWorkspaceResponse { uint64 id = 1; }

message MsgAddWorkspaceOwner {
  string creator = 1;
  string workspace_addr = 2;
  string new_owner = 3;
}

message MsgAddWorkspaceOwnerResponse {}

message MsgRemoveWorkspaceOwner {
  string creator = 1;
  string workspace_addr = 2;
  string owner = 3;
}

message MsgRemoveWorkspaceOwnerResponse {}

message MsgApproveAction {
  string creator = 1;
  string action_type = 2;
  uint64 action_id = 3;
}

message MsgApproveActionResponse {}

message MsgNewKeyring {
  string creator = 1;
  string description = 2;
}

message MsgNewKeyringResponse { uint64 id = 1; }

message MsgAddKeyringParty {
  string creator = 1;
  uint64 keyring_id = 2;
  string party = 3;
}

message MsgAddKeyringPartyResponse {}

message MsgAppendChildWorkspace {
  string creator = 1;
}

message MsgAppendChildWorkspaceResponse {}