syntax = "proto3";

package warden.act.v1beta1;

import "warden/act/v1beta1/action.proto";
import "warden/act/v1beta1/action_vote.proto";

option go_package = "github.com/warden-protocol/wardenprotocol/warden/x/act/types/v1beta1";

// EventCreateTemplate is emitted on Template creation
message EventCreateTemplate {
  // id of the new intent
  uint64 id = 1;

  // creator is the address that created the intent
  string creator = 2;
}

// EventUpdateTemplate is emitted when Template is updated
message EventUpdateTemplate {
  // id of updated intent
  uint64 id = 1;
}

// EventCreateAction is emitted when an Action is created
message EventCreateAction {
  // id of the new action
  uint64 id = 1;

  // creator is the address that created the action
  string creator = 2;
}

// EventActionVoted is emitted when an Action is voted on
message EventActionVoted {
  // id of action
  uint64 id = 1;

  // address of the account that participated in voting
  string participant = 2;

  // type of the vote
  ActionVoteType vote_type = 3;
}

// EventActionStateChange is emitted when an Action is in a new state
message EventActionStateChange {
  // id of action
  uint64 id = 1;

  // previous_status is the previous status of the action
  ActionStatus previous_status = 2;

  // new_status is the new status of the action
  ActionStatus new_status = 3;
}

// EventActionPruned is emitted when an Action is pruned in `Completed`, `Revoked`, `Pending` or `Timeout`
// states and won't be processed further
message EventActionPruned {
  // id of action
  uint64 id = 1;
}
